--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,13 +20,15 @@
  "keywords": [],
  "dependencies": {
   "cors": "^2.8.6",
-  "dotenv": "^17.2.3",
-  "express": "^5.2.1"
+  "dotenv": "^17.2.4",
+  "express": "^5.2.1",
+  "oracledb": "^6.10.0"
  },
  "devDependencies": {
   "@types/cors": "^2.8.19",
   "@types/express": "^5.0.6",
-  "@types/node": "^25.2.0",
+  "@types/node": "^25.2.1",
+  "@types/oracledb": "^6.10.1",
   "shared": "^1.0.0",
   "tsx": "^4.21.0",
   "typescript": "^5.9.3"
