--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -1,5 +1,6 @@
-DB_USER=scott
-DB_PASSWORD=tiger
+DB_USER=WDOG
+DB_USER_PASSWORD=1234
 DB_HOST=localhost
 DB_PORT=1521
-DB_SID=XEPDB1
+DB_SERVICE_NAME=MYPDB1
+PORT=3001
